welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: not found: value ?critMessage
  ?critMessage(cpt)
  ^ColumnByColumn:14: error: not found: value ?critMessage
    ?critMessage(cpt)
    ^