welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var cpt:Int = 0
  var x:Int = 0
  var y:Int = 0
  ?critMessage(cpt)
	while (cpt<getMondeHauteur()*getMondeLargeur()) {
    if (getY()==6) {
      setPos(x+1, 0)
      x+=1
      y=0
    }
    else {
      setPos(x, y+1)
    }
    ?critMessage(cpt)
    cpt=cpt+1
  }
}